--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,20 +1,36 @@
 ---
 - hosts: localhost
-  become: true
   vars:
-    lxd_deploy_networks:
-      - name: lxdbr0
-        description: Default bridge
+    lxd_deploy_profiles:
+      - name: "default"
+        description: "Default LXD profile"
         config:
-          ipv4.address: 1.1.1.1/24
+          security.privileged: "true"
+          environment.http_proxy: ""
+          user.network_mode: ""
+        devices:
+          eth0:
+            nictype: "bridged"
+            parent: "lxdbr0"
+            type: "nic"
+          root:
+            path: "/"
+            pool: "default"
+            type: "disk"
+
+    lxd_deploy_networks:
+      - name: "lxdbr0"
+        description: "Default LXD bridge"
+        config:
+          ipv4.address: "1.1.1.1/24"
           ipv4.nat: "true"
-          ipv6.address: none
+          ipv6.address: "none"
+
     lxd_deploy_containers:
-      - name: container1
-        ip: 1.1.1.11
-        alias: centos/7/amd64
-        extra_conf:
-          - lxc.mount.entry = /dev/net dev/net none bind,create=dir
-          - lxc.cgroup.devices.allow = c 10:200 rwm
+      - name: "c1"
+        ip: "1.1.1.111"
+        alias: "centos/7/amd64"
+        profiles:
+          - "default"
   roles:
     - role_to_test
