--- a/vars/Ubuntu14.yml
+++ b/vars/Ubuntu14.yml
@@ -1,2 +1,3 @@
 ---
-lxd_deploy_apt_default_release: "trusty-backports"
+lxd_deploy_apt_default_release: "trusty"
+lxd_deploy_apt_repository: "ppa:ubuntu-lxc/lxd-stable"
