--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,8 +17,9 @@
 
 - name: Création du storage default
   shell: "lxc storage create default dir source=/var/lib/lxd/storage-pools/default"
-  changed_when: false
-  ignore_errors: true
+  register: default_storage_add
+  changed_when: "default_storage_add.rc == 0"
+  failed_when: "default_storage_add.rc != 0 and 'already exists' not in default_storage_add.stderr"
 
 - name: Création des networks
   lxd_network:
