--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,16 @@
 ---
-- name: Inclusion des variables OS specific
-  include_vars: "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
-
-- name: Installation des repositories
-  apt_repository:
-    repo: "{{ lxd_deploy_apt_repository }}"
-  when: lxd_deploy_apt_repository is defined
-
-- name: Installation des packages lxd
+- name: Installation de {{ lxd_dependencies_packages | join(" et ") }}
   apt:
     name: "{{ item }}"
     state: latest
-    default_release: "{{ lxd_deploy_apt_default_release }}"
     update_cache: yes
-  with_items: "{{ lxd_deploy_apt_packages }}"
+  with_items: "{{ lxd_dependencies_packages }}"
+
+- name: Installation du snap LXD
+  shell: snap install lxd
+
+- name: Debug
+  shell: snap list
 
 - name: Création du storage default
   shell: "lxc storage create default dir source=/var/lib/lxd/storage-pools/default"
