--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,19 @@
 ---
-- name: Installation de {{ lxd_dependencies_packages | join(" et ") }}
-  apt:
+- name: Inclusion des variables OS specific
+  include_vars: "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
+
+- name: Selecting release to install from
+  set_fact:
+    lxd_apt_release: "{{ lxd_lts_apt_release }}"
+  when: "lxd_use_lts is defined and lxd_use_lts"
+
+- name: Installation des packages lxd
+ apt:
     name: "{{ item }}"
     state: latest
+    default_release: "{{ lxd_apt_release }}"
     update_cache: yes
-  with_items: "{{ lxd_dependencies_packages }}"
-
-- name: Installation du snap LXD
-  shell: snap install lxd
-
-- name: Debug
-  shell: snap list
+  with_items: "{{ lxd_apt_packages }}"
 
 - name: Création du storage default
   shell: "lxc storage create default dir source=/var/lib/lxd/storage-pools/default"
