--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Selecting release to install from
   set_fact:
     lxd_apt_release: "{{ lxd_lts_apt_release }}"
-  when: "lxd_use_lts is defined and lxd_use_lts"
+  when: "lxd_use_lts"
 
 - name: Installation des packages lxd
   apt:
@@ -20,6 +20,7 @@
   register: default_storage_add
   changed_when: "default_storage_add.rc == 0"
   failed_when: "default_storage_add.rc != 0 and 'already exists' not in default_storage_add.stderr"
+  when: "not lxd_use_lts"
 
 - name: Création des networks
   lxd_network:
@@ -28,6 +29,7 @@
     config: "{{ item.config }}"
     description: "{{ item.description }}"
   with_items: "{{ lxd_deploy_networks }}"
+  when: "not lxd_use_lts"
 
 - name: Création des profiles
   lxd_profile:
