--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,43 +1,12 @@
 ---
 - hosts: localhost
-  vars:
-    lxd_deploy_profiles:
-      - name: "default"
-        description: "Default LXD profile"
-        config:
-          security.privileged: "true"
-          environment.http_proxy: ""
-          user.network_mode: ""
-        devices:
-          eth0:
-            nictype: "bridged"
-            parent: "lxdbr0"
-            type: "nic"
-          root:
-            path: "/"
-            pool: "default"
-            type: "disk"
-
-    lxd_deploy_networks:
-      - name: "lxdbr0"
-        description: "Default LXD bridge"
-        config:
-          ipv4.address: "1.1.1.1/24"
-          ipv4.nat: "true"
-          ipv6.address: "none"
-
-    lxd_deploy_containers:
-      - name: "c1"
-        alias: "centos/7/amd64"
-        profiles:
-          - "default"
-      - name: "c2"
-        alias: "ubuntu/xenial/amd64"
-        profiles:
-          - "default"
-      - name: "c3"
-        alias: "debian/9/amd64"
-        profiles:
-          - "default"
+  tasks:
+    - name: Include vars
+      include_vars:
+        dir: "vars"
+        files_matching: "{{ item }}"
+      with_items:
+        - "main.yml"
+        - "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
   roles:
     - role_to_test
