--- a/tests/vars/Ubuntu14.yml
+++ b/tests/vars/Ubuntu14.yml
@@ -14,3 +14,11 @@ lxd_profiles:
       root:
         path: "/"
         type: "disk"
+
+lxd_bridge:
+  ipv4:
+    address: "10.217.187.1/24"
+    nat: "true"
+  ipv6:
+    address: "fd26:9b5f:cdb1:7756::1/64"
+    nat: "true"
