Adding an handler flush for taking network configuration into account

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,6 +37,9 @@
     dest: /etc/default/lxd-bridge
   notify: restart lxd
   when: "lxd_use_lts"
+  
+- name: Flush des handlers
+  meta: flush_handlers
 
 - name: Création des profiles
   lxd_profile:
