--- a/tests/vars/Ubuntu14.yml
+++ b/tests/vars/Ubuntu14.yml
@@ -1,19 +1,19 @@
 ---
-lxd_profiles:
-  - name: "default"
-    description: "Default LXD profile"
-    config:
-      security.privileged: "true"
-      environment.http_proxy: ""
-      user.network_mode: ""
-    devices:
-      eth0:
-        nictype: "bridged"
-        parent: "lxdbr0"
-        type: "nic"
-      root:
-        path: "/"
-        type: "disk"
+# lxd_profiles:
+#   - name: "default"
+#     description: "Default LXD profile"
+#     config:
+#       security.privileged: "true"
+#       environment.http_proxy: ""
+#       user.network_mode: ""
+#     devices:
+#       eth0:
+#         nictype: "bridged"
+#         parent: "lxdbr0"
+#         type: "nic"
+#       root:
+#         path: "/"
+#         type: "disk"
 
 lxd_bridge:
   ipv4:
