--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ after_failure:
   - echo '# ip machine'
   - /sbin/ip a
   - echo '# ip c1'
-  - sudo -E su travis -c "lxc exec c1 /sbin/ip a"
-  - echo '# list container containers'
+  - sudo -E su travis -c "lxc exec c1 -- /sbin/ip a"
+  - echo '# list container'
   - sudo -E su travis -c "lxc list"
+  - echo '# list container's containers'
+  - sudo -E su travis -c "lxc exec c1 -- lxc list"
