--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,13 @@ script:
   - ${PWD}/tests/test.sh
 
 after_failure:
-  - echo '# ip machine'
+  - echo '### ip machine'
   - /sbin/ip a
-  - echo '# ip c1'
+  - echo '### ip c1'
   - sudo -E su travis -c "lxc exec c1 -- /sbin/ip a"
-  - echo '# list container'
+  - echo '### list container'
   - sudo -E su travis -c "lxc list"
-  - echo '# list container's containers'
+  - echo '### list container\'s containers'
   - sudo -E su travis -c "lxc exec c1 -- lxc list"
+  - echo '### show lxd-bridge config file'
+  - sudo -E su travis -c "lxc exec c1 -- cat /etc/default/lxd-bridge
