--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,9 @@
   shell: "lxc storage create default dir source=/var/lib/lxd/storage-pools/default"
   register: default_storage_add
   changed_when: "default_storage_add.rc == 0"
-  failed_when: "default_storage_add.rc != 0 and 'already exists' not in default_storage_add.stderr"
+  failed_when:
+    - "default_storage_add.rc != 0"
+    - 'already exists' not in default_storage_add.stderr"
   when: "not lxd_use_lts"
 
 - name: Création des networks
@@ -35,6 +37,10 @@
 
 - name: Copie de la configuration réseau LTS
   command: "lxd init --auto"
+  register: lxd_init_result
+  failed_when:
+    - "lxd_init_result.rc != 0"
+    - "'lxd init requires an empty LXD.' not in lxd_init_result.stdout"
   when: "lxd_use_lts"
 
 - name: Copie de la configuration réseau LTS
