--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
   changed_when: "default_storage_add.rc == 0"
   failed_when:
     - "default_storage_add.rc != 0"
-    - 'already exists' not in default_storage_add.stderr"
+    - "'already exists' not in default_storage_add.stderr"
   when: "not lxd_use_lts"
 
 - name: Création des networks
