Put root device back for testing profiles

--- a/tests/vars/Ubuntu14.yml
+++ b/tests/vars/Ubuntu14.yml
@@ -11,9 +11,9 @@ lxd_profiles:
         nictype: "bridged"
         parent: "lxdbr0"
         type: "nic"
-#       root:
-#         path: "/"
-#         type: "disk"
+       root:
+         path: "/"
+         type: "disk"
 
 lxd_bridge:
   ipv4:
