--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,7 +38,7 @@
 - name: Copie de la configuration réseau LTS
   command: "lxd init --auto"
   register: lxd_init_result
-  changed_when: "default_storage_add.rc == 0"
+  changed_when: "lxd_init_result.rc == 0"
   failed_when:
     - "lxd_init_result.rc != 0"
     - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
