--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,7 +35,7 @@
     - "not lxd_use_lts"
     - "lxd_networks is defined"
 
-- name: Copie de la configuration réseau LTS
+- name: Execution de lxd init pour la LTS
   command: "lxd init --auto"
   register: lxd_init_result
   changed_when: "lxd_init_result.rc == 0"
@@ -44,22 +44,13 @@
     - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
   when: "lxd_use_lts"
 
-- name: Copie de la configuration réseau LTS
+- name: Copie de la configuration réseau pour la LTS
   template:
     src: lxd-bridge.j2
     dest: /etc/default/lxd-bridge
   notify: restart lxd
   when: "lxd_use_lts"
 
-- name: debug
-  command: "cat /etc/default/lxd-bridge"
-  register: test
-  when: "lxd_use_lts"
-  
-- name: debug
-  debug:
-    var: test
-  
 - name: Flush des handlers
   meta: flush_handlers
 
