--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -26,29 +26,9 @@
   loop_control:
     label: "{{ item.item.name }}"
 
-- name: Installation de python sur les containers CentOS
-  raw: yum -y install python
-  delegate_to: "{{ item.item.name }}"
-  with_items: "{{ add_lxd_container.results }}"
-  when:
-    - "'create' in item.actions"
-    - "'centos' in item.item.alias"
-  become: false
-
-- name: Installation de python sur les containers Debian
-  raw: apt-get update && apt-get -y install python ca-certificates
-  delegate_to: "{{ item.item.name }}"
-  with_items: "{{ add_lxd_container.results }}"
-  when:
-    - "'create' in item.actions"
-    - "'ubuntu' in item.item.alias or 'debian' in item.item.alias"
-  become: false
-
-- name: Installation de gpg pour Debian 9 et le module apt_key
-  raw: apt-get -y install gpg
-  delegate_to: "{{ item.item.name }}"
-  with_items: "{{ add_lxd_container.results }}"
-  when:
-    - "'create' in item.actions"
-    - "'stretch' in item.item.alias"
-  become: false
+- name: Installation de python sur les containers
+  raw: |
+    test -e /etc/redhat-release && manager='yum'
+    test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates gpg'
+    $manager -y install python $extra
+  changed_when: false
