--- a/tests/vars/main.yml
+++ b/tests/vars/main.yml
@@ -1,14 +1,34 @@
 ---
 lxd_containers:
-    - name: "c1"
+    - name: "c6"
+      alias: "centos/6/amd64"
+      profiles:
+        - "default"
+    - name: "c7"
       alias: "centos/7/amd64"
       profiles:
         - "default"
-    - name: "c2"
-      alias: "ubuntu/xenial/amd64"
+    - name: "u14"
+      alias: "ubuntu/14.04/amd64"
       profiles:
         - "default"
-    - name: "c3"
+    - name: "u16"
+      alias: "ubuntu/16.04/amd64"
+      profiles:
+        - "default"
+    - name: "u17"
+      alias: "ubuntu/17.04/amd64"
+      profiles:
+        - "default"
+    - name: "d7"
+      alias: "debian/7/amd64"
+      profiles:
+        - "default"
+    - name: "d8"
+      alias: "debian/8/amd64"
+      profiles:
+        - "default"
+    - name: "d9"
       alias: "debian/9/amd64"
       profiles:
         - "default"
