--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -30,7 +30,7 @@
   raw: |
     test -e /etc/redhat-release && manager='yum'
     test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates'
-    test -e /usr/bin/python && $manager -y install python $extra
+    $manager -y install python $extra
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
