--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -25,10 +25,11 @@
     label: "{{ item.name }}"
 
 - name: Installation de python sur les containers
-  raw: "test -e /etc/redhat-release && manager='yum' ; test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates' ; $manager -y install python $extra"
+  raw: |
+    test -e /etc/redhat-release && manager='yum'
+    test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates'
+    $manager -y install python $extra"
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
   become: false
-  loop_control:
-    label: "{{ item.name }}"
