Changes to python install
- Only install if python is missing
- Only does update on apt-get style containers

--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -26,10 +26,12 @@
 
 - name: Mise à jour et installation de python sur les containers
   raw: |
-    test -e /etc/redhat-release && manager='yum'
-    test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates'
-    $manager -y update
-    $manager -y install python $extra
+    if [[ ! -f /usr/bin/python ]]
+    then
+      test -e /etc/redhat-release && manager='yum'
+      test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates' && $manager -y update
+      $manager -y install python $extra
+    fi
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
