--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -25,13 +25,7 @@
     label: "{{ item.name }}"
 
 - name: Mise à jour et installation de python sur les containers
-  raw: |
-    if [[ ! -f /usr/bin/python ]]
-    then
-      test -e /etc/redhat-release && manager='yum'
-      test -e /etc/debian_version && manager='apt-get' && extra='ca-certificates' && $manager -y update
-      $manager -y install python $extra
-    fi
+  raw: test -e /usr/bin/python || test -e /etc/debian_version && apt-get -y update && apt-get -y install python ca-certificates
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
