--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -25,7 +25,7 @@
     label: "{{ item.name }}"
 
 - name: Mise à jour et installation de python sur les containers
-  raw: "[[ -f /etc/debian_version && ! -f /usr/bin/python ]] && apt-get -y update && apt-get -y install python ca-certificates"
+  raw: "/bin/bash -c '[[ -f /etc/debian_version && ! -f /usr/bin/python ]] && apt-get -y update && apt-get -y install python ca-certificates'"
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
