--- a/vars/Ubuntu14.yml
+++ b/vars/Ubuntu14.yml
@@ -1,3 +1,6 @@
 ---
-lxd_use_lts: true
-lxd_lts_apt_release: "trusty-backports"
+lxd_apt_release: "trusty-backports"
+__lxd_root_device:
+  path: "/"
+  type: "disk"
+
