--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,30 @@
 ---
-# defaults file for lxc-deploy
-lxd_use_lts: false
+# Feature defaults
+lxd_networks:
+  - name: lxdbr0
+    description: "Default lxd network"
+    config:
+      ipv4.address: "192.168.56.1/24"
+      ipv4.nat: "true"
+      ipv6.address: "none"
+
+# LTS defaults
+lxd_bridge:
+  ipv4:
+    address: "192.168.56.1/24"
+    nat: "true"
+
+# Common defaults
+lxd_profiles:
+  - name: "default"
+    description: "Default lxd profile"
+    config:
+      environment.http_proxy: ""
+      user.network_mode: ""
+    devices:
+      eth0:
+        nictype: "bridged"
+        parent: "lxdbr0"
+        type: "nic"
+      root: "{{ __lxd_root_device }}"
+
