--- a/tasks/configure-lts.yml
+++ b/tasks/configure-lts.yml
@@ -1,5 +1,5 @@
 ---
-- name: Execution de lxd init pour la LTS
+- name: Execute lxd init (LTS)
   command: "lxd init --auto"
   register: lxd_init_result
   changed_when: "lxd_init_result.rc == 0"
@@ -7,7 +7,7 @@
     - "lxd_init_result.rc != 0"
     - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
 
-- name: Copie de la configuration réseau pour la LTS
+- name: Copy lxd-bridge network configuration (LTS)
   template:
     src: lxd-bridge.j2
     dest: /etc/default/lxd-bridge
