--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
 - block:
-    - name: Inclusion des variables OS specific
+    - name: Include OS-specific vars
       include_vars: "{{ ansible_distribution }}{{ ansible_distribution_major_version }}.yml"
       tags:
         - lxd_install
         - lxd_config
         - lxd_deploy
 
-    - name: Installation de LXD
+    - name: Install LXD
       include_tasks: "install.yml"
       tags: lxd_install
 
-    - name: Configuration de LXD
+    - name: Configure LXD
       include_tasks: "configure.yml"
       tags: lxd_config
 
-    - name: Déploiement des containers LXD
+    - name: Deploy LXD containers
       include_tasks: "containers.yml"
       tags: lxd_deploy
   tags: lxd
