--- a/tasks/configure-lts.yml
+++ b/tasks/configure-lts.yml
@@ -2,7 +2,7 @@
 - name: Execute lxd init (LTS)
   command: "lxd init --auto"
   register: lxd_init_result
-  changed_when: "lxd_init_result.rc == 0"
+  changed_when: false
   failed_when:
     - "lxd_init_result.rc != 0"
     - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
