--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -25,7 +25,7 @@
     label: "{{ item.name }}"
 
 - name: Installing python and updating containers
-  raw: "/bin/bash -c '[[ -f /etc/debian_version && ! -f /usr/bin/python ]] && apt-get -y update && apt-get -y install python ca-certificates || true'"
+  raw: "/bin/bash -c '[[ -f /etc/debian_version && ! -f /usr/bin/python ]] && apt-get -y update && apt-get -y install python ca-certificates gnupg-curl || true'"
   with_items: "{{ lxd_containers }}"
   delegate_to: "{{ item.name }}" 
   changed_when: false
