--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -32,7 +32,8 @@
         apt-get -y install python 
         apt-get -y ca-certificates gnupg-curl
         apt-get -y ca-certificates gnupg1-curl
-    if [[ -f /etc/redhat-release && ! -f /usr/bin/python ]]
+    elif [[ -f /etc/redhat-release && ! -f /usr/bin/python ]]
+    then
         yum -y install python
     fi
   with_items: "{{ lxd_containers }}"
