Change for respecting new 2.5 inheritance on tags   * see https://github.com/Lujeni/ansible/commit/d5aa1918be583a74209962e084f4a13e1b0225ce

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,23 +1,25 @@
 ---
-- name: Get lxd version
-  shell: "lxd --version"
-  register: lxd_version_result
-  changed_when: false
+- block:
+    - name: Get lxd version
+      shell: "lxd --version"
+      register: lxd_version_result
+      changed_when: false
 
-- name: Configuration for Feature version
-  include_tasks: configure-feature.yml
-  when: "lxd_version_result.stdout | version_compare('2.20', '>=')"
+    - name: Configuration for Feature version
+      include_tasks: configure-feature.yml
+      when: "lxd_version_result.stdout | version_compare('2.20', '>=')"
 
-- name: Configuration for LTS version
-  include_tasks: configure-lts.yml
-  when: "lxd_version_result.stdout | version_compare('2.20', '<=')"
+    - name: Configuration for LTS version
+      include_tasks: configure-lts.yml
+      when: "lxd_version_result.stdout | version_compare('2.20', '<=')"
 
-- name: Create LXD profiles
-  lxd_profile:
-    name: "{{ item.name }}"
-    state: "present"
-    config: "{{ item.config }}"
-    devices: "{{ item.devices }}"
-    description: "{{ item.description }}"
-  with_items: "{{ lxd_profiles }}"
-  when: "lxd_profiles is defined"
+    - name: Create LXD profiles
+      lxd_profile:
+        name: "{{ item.name }}"
+        state: "present"
+        config: "{{ item.config }}"
+        devices: "{{ item.devices }}"
+        description: "{{ item.description }}"
+      with_items: "{{ lxd_profiles }}"
+      when: "lxd_profiles is defined"
+  tags: lxd_config
