--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,13 +1,15 @@
 ---
-- name: Vérification de la présence du repo
-  apt_repository:
-    repo: "deb http://archive.ubuntu.com/ubuntu {{ lxd_apt_release }} main restricted universe multiverse"
-    state: present
+- block:
+    - name: Vérification de la présence du repo
+      apt_repository:
+        repo: "deb http://archive.ubuntu.com/ubuntu {{ lxd_apt_release }} main restricted universe multiverse"
+        state: present
 
-- name: Installation des packages lxd
-  apt:
-    name: "{{ item }}"
-    state: latest
-    default_release: "{{ lxd_apt_release }}"
-    update_cache: yes
-  with_items: "{{ lxd_apt_packages }}"
+    - name: Installation des packages lxd
+      apt:
+        name: "{{ item }}"
+        state: latest
+        default_release: "{{ lxd_apt_release }}"
+        update_cache: yes
+      with_items: "{{ lxd_apt_packages }}"
+  tags: lxd_install
