--- a/tasks/configure-lts.yml
+++ b/tasks/configure-lts.yml
@@ -1,17 +1,19 @@
 ---
-- name: Execute lxd init (LTS)
-  command: "lxd init --auto"
-  register: lxd_init_result
-  changed_when: false
-  failed_when:
-    - "lxd_init_result.rc != 0"
-    - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
+- block:
+    - name: Execute lxd init (LTS)
+      command: "lxd init --auto"
+      register: lxd_init_result
+      changed_when: false
+      failed_when:
+        - "lxd_init_result.rc != 0"
+        - "'lxd init requires an empty LXD.' not in lxd_init_result.stderr"
 
-- name: Copy lxd-bridge network configuration (LTS)
-  template:
-    src: lxd-bridge.j2
-    dest: /etc/default/lxd-bridge
-  notify: restart lxd
+    - name: Copy lxd-bridge network configuration (LTS)
+      template:
+        src: lxd-bridge.j2
+        dest: /etc/default/lxd-bridge
+      notify: restart lxd
 
-- name: Flush des handlers
-  meta: flush_handlers
+    - name: Flush des handlers
+      meta: flush_handlers
+  tags: lxd_config
