--- a/tasks/containers.yml
+++ b/tasks/containers.yml
@@ -1,42 +1,44 @@
 ---
-- name: Create containers
-  lxd_container:
-    name: "{{ item.name }}"
-    state: started
-    source:
-      type: "{{ item.type | default('image') }}"
-      mode: "{{ item.mode | default('pull') }}"
-      server: "{{ item.server | default('https://images.linuxcontainers.org') }}"
-      protocol: "{{ item.protocol | default('simplestreams') }}"
-      alias: "{{ item.alias }}"
-    profiles: "{{ item.profiles | default({}) }}"
-    devices: "{{ item.devices | default({}) }}"
-    wait_for_ipv4_addresses: true
-  with_items: "{{ lxd_containers }}"
-  when: "lxd_containers is defined"
+- block:
+    - name: Create containers
+      lxd_container:
+        name: "{{ item.name }}"
+        state: started
+        source:
+          type: "{{ item.type | default('image') }}"
+          mode: "{{ item.mode | default('pull') }}"
+          server: "{{ item.server | default('https://images.linuxcontainers.org') }}"
+          protocol: "{{ item.protocol | default('simplestreams') }}"
+          alias: "{{ item.alias }}"
+        profiles: "{{ item.profiles | default({}) }}"
+        devices: "{{ item.devices | default({}) }}"
+        wait_for_ipv4_addresses: true
+      with_items: "{{ lxd_containers }}"
+      when: "lxd_containers is defined"
 
-- name: Add containers to dynamic inventory
-  add_host:
-    name: "{{ item.name }}"
-    ansible_connection: lxd
-  with_items: "{{ lxd_containers }}"
-  changed_when: false
-  loop_control:
-    label: "{{ item.name }}"
+    - name: Add containers to dynamic inventory
+      add_host:
+        name: "{{ item.name }}"
+        ansible_connection: lxd
+      with_items: "{{ lxd_containers }}"
+      changed_when: false
+      loop_control:
+        label: "{{ item.name }}"
 
-- name: Installing python if absent
-  raw: |
-    if [[ -f /etc/debian_version && ! -f /usr/bin/python ]]
-    then
-        apt-get -y update
-        apt-get -y install python 
-        apt-get -y ca-certificates gnupg-curl
-        apt-get -y ca-certificates gnupg1-curl
-    elif [[ -f /etc/redhat-release && ! -f /usr/bin/python ]]
-    then
-        yum -y install python
-    fi
-  with_items: "{{ lxd_containers }}"
-  delegate_to: "{{ item.name }}" 
-  changed_when: false
-  become: false
+    - name: Installing python if absent
+      raw: |
+        if [[ -f /etc/debian_version && ! -f /usr/bin/python ]]
+        then
+            apt-get -y update
+            apt-get -y install python 
+            apt-get -y ca-certificates gnupg-curl
+            apt-get -y ca-certificates gnupg1-curl
+        elif [[ -f /etc/redhat-release && ! -f /usr/bin/python ]]
+        then
+            yum -y install python
+        fi
+      with_items: "{{ lxd_containers }}"
+      delegate_to: "{{ item.name }}" 
+      changed_when: false
+      become: false
+  tags: lxd_deploy
